Add Receive and MethodIn, Cleanup In this commit I added the Receive trait for receiving data from native, as well as MethodIn, which will be used for sending data into a Method. I've also removed the FFI2 implementations for cleanup, and will begin removing FFI soon. Finally, FFI3 will be renamed to FFI thanks to its ease of implementation compared to previous versions, as well as performance gains.